[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/ThaleahFat_TTF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Button_Pressed.png" type="Texture" id=3]
[ext_resource path="res://Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/Button_Normal.png" type="Texture" id=5]
[ext_resource path="res://UI/Button_Hover.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 3

[node name="OptionsMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.25989
margin_top = -1.52292
margin_right = -1.25989
margin_bottom = -1.52295
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OptionsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.8, 0.886275, 0.882353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.53
margin_top = -29.1892
margin_right = 105.47
margin_bottom = -13.1892
min_value = -24.0
max_value = 0.0
value = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.53
margin_top = 140.0
margin_right = 105.47
margin_bottom = 156.0
min_value = -24.0
max_value = 0.0
value = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -60.0
margin_right = 93.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 1 )
text = "MUSIC VOLUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 110.0
margin_right = 93.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "SFX VOLUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -104.0
margin_top = 25.0
margin_right = 105.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
text = "VOLUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 265.0
margin_right = -48.0
margin_bottom = 280.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButtonLabel" type="Label" parent="OptionsMenu/BackButton"]
margin_left = 7.02943
margin_top = 1.0
margin_right = 42.0294
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 4 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="OptionsMenu/MusicSlider" to="OptionsMenu" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="OptionsMenu/SFXSlider" to="OptionsMenu" method="_on_SFXSlider_value_changed"]
[connection signal="button_down" from="OptionsMenu/BackButton" to="OptionsMenu" method="_on_BackButton_button_down"]
[connection signal="button_up" from="OptionsMenu/BackButton" to="OptionsMenu" method="_on_BackButton_button_up"]
[connection signal="pressed" from="OptionsMenu/BackButton" to="OptionsMenu" method="_on_BackButton_pressed"]
